--- a/templates/paginaprincipal.html
+++ b/templates/paginaprincipal.html
@@ -30,10 +30,10 @@
                 <i class="fas fa-file-alt"></i> <!-- Ícono de hoja -->
                 <span>Reporte de <br> bitácora</span>
             </a>
-            <button class="menu-button" id="instalacion-btn">
-                <i class="fas fa-tools"></i> <!-- Ícono de herramientas -->
-                <span>Reporte de instalación</span>
-            </button>
+            <a href="{{ url_for('indexFormulario') }}" class="a" id="bitacora-btn">
+                <i class="fas fa-file-alt"></i> <!-- Ícono de hoja -->
+                <span>Reporte de <br> instalación</span>
+            </a>
             <button class="menu-button" id="mantenimiento-btn">
                 <i class="fas fa-map-marker-alt"></i> <!-- Ícono de mapa -->
                 <span>Reporte de recorrido</span>
