--- a/templates/paginaprincipal.html
+++ b/templates/paginaprincipal.html
@@ -32,7 +32,7 @@
             </a>
             <a href="{{ url_for('indexFormulario') }}" class="a" id="bitacora-btn">
                 <i class="fas fa-file-alt"></i> <!-- Ícono de hoja -->
-                <span>Reporte de <br> instalación</span>
+                <span>Formulario <br> ISA</span>
             </a>
             <button class="menu-button" id="mantenimiento-btn">
                 <i class="fas fa-map-marker-alt"></i> <!-- Ícono de mapa -->
