--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -266,7 +266,7 @@
         <!-- Logo y encabezado -->
         <header>
             <div id="logo-container">
-                <img src="{{ url_for('static', filename='logo.png') }}" id="logo" alt="Logo">
+                <img src="{{ url_for('static', filename='logoISA.jpg') }}" id="logo" alt="Logo">
             </div>
             <h1>Registro de Actividades</h1>
         </header>
