--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -66,7 +66,7 @@
 
     .add-button {
         background: white;
-        color: #f8b126;
+        color: #0073CF;
         padding: 5px 12px;
         border-radius: 3px;
         border: none;
@@ -133,7 +133,7 @@
 
     .section-toggle {
         width: 100%;
-        background-color: #f8b126;
+        background-color: #0073CF;
         color: white;
         padding: 12px;
         border: none;
