--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -42,7 +42,7 @@
     }
 
     .section-header {
-        background-color: #f8b126;
+        background-color: #1CA3EC;
         color: white;
         padding: 12px;
         margin: 20px 0 10px 0;
@@ -66,7 +66,7 @@
 
     .add-button {
         background: white;
-        color: #0073CF;
+        color: #1CA3EC;
         padding: 5px 12px;
         border-radius: 3px;
         border: none;
@@ -133,7 +133,7 @@
 
     .section-toggle {
         width: 100%;
-        background-color: #0073CF;
+        background-color: #1CA3EC;
         color: white;
         padding: 12px;
         border: none;
