--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -161,7 +161,7 @@
 
     .section-number {
         background: white;
-        color: #f8b126;
+        color: #1CA3EC;
         border-radius: 50%;
         width: 25px;
         height: 25px;
@@ -219,7 +219,7 @@
         border-radius: 50%;
         background-color: #f5f5f5;
         border: 1px solid #ddd;
-        color: #FF6600;
+        color: #1CA3EC;
         font-size: 18px;
         cursor: pointer;
         display: flex;
@@ -234,7 +234,7 @@
     }
 
     .mic-button.recording {
-        background-color: #e74c3c;
+        background-color: #1CA3EC;
         color: white;
         animation: pulse 1.5s infinite;
     }
