--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -104,7 +104,7 @@
     }
 
     .remove-button {
-        background-color: #e74c3c;
+        background-color: #707070;
         color: white;
         border: none;
         padding: 6px 12px;
@@ -116,7 +116,7 @@
     }
 
     .remove-button:hover {
-        background-color: #c0392b;
+        background-color: #515151;
     }
 
     .readonly-field {
