--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -419,7 +419,7 @@
 
             <div class="centrar">
                 <div class="button-row">
-                    <button id="start-camera" onclick="startCamera()">
+                    <button id="start-camera-form" onclick="startCamera()">
                         <i class="fas fa-camera"></i> Iniciar cámara
                     </button>
                     <button id="take-photo" class="round-button" style="display:none;" onclick="takePhoto()" title="Tomar Foto">
