--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -147,7 +147,7 @@
     }
 
     .section-toggle:hover {
-        background-color: #e9c784;
+        background-color: #0296e6;
     }
 
     .section-content {
