--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -446,7 +446,7 @@
                     <input type="file" id="file-input" class="file-input" accept="image/*" multiple style="display:none;">
                 </div>
 
-                <button id="save-record-form" onclick="saveRecord()">
+                <button id="save-record-form" onclick="saveRecordForm()">
                     <i class="fas fa-save"></i> Guardar registro
                 </button>
             </div>
