--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label>Ítem</label>
                 <div class="input-with-icon">
-                    <input type="text" class="form-input" data-api-name="__x00cd__tem" placeholder="Número de ítem">
+                    <input type="number" class="form-input" data-api-name="__x00cd__tem" placeholder="Número de ítem">
                     <button class="mic-button" type="button"><i class="fas fa-microphone"></i></button>
                 </div>
             </div>
@@ -42,7 +42,7 @@
             <div class="form-group">
                 <label>Ítem</label>
                 <div class="input-with-icon">
-                    <input type="text" class="form-input" data-api-name="__x00cd__tem__x0020__Pendiente" placeholder="Número de ítem">
+                    <input type="number" class="form-input" data-api-name="__x00cd__tem__x0020__Pendiente" placeholder="Número de ítem">
                     <button class="mic-button" type="button"><i class="fas fa-microphone"></i></button>
                 </div>
             </div>
