--- a/templates/indexFormulario.html
+++ b/templates/indexFormulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control Calidad Materiales - Synchro</title>
-    <link rel="icon" href="{{ url_for('static', filename='logo.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='logoISA.jpg') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='styleFormulario.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -108,7 +108,7 @@
     <div id="app">
         <header>
             <div id="logo-container">
-                <img src="{{ url_for('static', filename='logo.png') }}" id="logo" alt="Logo">
+                <img src="{{ url_for('static', filename='logoISA.jpg') }}" id="logo" alt="Logo">
             </div>
             <h1>Control Calidad Materiales (Synchro)</h1>
         </header>
