--- a/templates/PrincipalScreen.html
+++ b/templates/PrincipalScreen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="icon" href="/static/logocompensar.png" type="image/x-icon">
+    <link rel="icon" href="/static/logoISA.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/static/PrincipalScreen.css">
     <!-- Agregamos SweetAlert2 para mensajes bonitos -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -13,7 +13,7 @@
     <div id="app" class="main-container">
         <header>
             <div id="logo-container" class="logo-container">
-                <img id="logo" class="logo" src="/static/logocompensar.png" alt="Logo">
+                <img id="logo" class="logo" src="/static/logoISA.jpg" alt="Logo">
             </div>
         </header>
         <form class="form" method="POST" action="{{ url_for('login') }}" id="loginForm">
