--- a/templates/historialRegistro.html
+++ b/templates/historialRegistro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historial de Registros</title>
-    <link rel="icon" href="{{ url_for('static', filename='logocompensar.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='logoISA.jpg') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='history.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -72,7 +72,7 @@
 <body>
     <div class="main-container">
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='logocompensar.png') }}" alt="Logo" class="logo">
+            <img src="{{ url_for('static', filename='logoISA.jpg') }}" alt="Logo" class="logo">
         </div>
 
         <div class="intro-text">
