--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Sign Up</title>
-    <link rel="icon" href="/static/logocompensar.png" type="image/x-icon">
+    <link rel="icon" href="/static/logoISA.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/static/registro.css">
     <!-- Agregamos SweetAlert para mensajes -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -13,7 +13,7 @@
     <div id="app">
         <header>
             <div id="logo-container">
-                <img id="logo" src="/static/logocompensar.png" alt="Logo">
+                <img id="logo" src="/static/logoISA.jpg" alt="Logo">
             </div>
         </header>
         <div class="screen">
