--- a/templates/addproject.html
+++ b/templates/addproject.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar Nuevo Proyecto</title>
-    <link rel="icon" href="{{ url_for('static', filename='logocompensar.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='logoISa.jpg') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='addproject.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="main-container">
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='logocompensar.png') }}" alt="Logo de la empresa" class="logo">
+            <img src="{{ url_for('static', filename='logoISA.jpg') }}" alt="Logo de la empresa" class="logo">
         </div>
 
         <div class="form-header">
