--- a/templates/history.html
+++ b/templates/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Registros</title>
-    <link rel="icon" href="{{ url_for('static', filename='logocompensar.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='logoISA.jpg') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='history.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">  
     <!-- SweetAlert para mensajes -->
@@ -53,7 +53,7 @@
         
         <!-- Espacio para el logo -->
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='logocompensar.png') }}" alt="Logo de la empresa" class="logo">
+            <img src="{{ url_for('static', filename='logoISA.jpg') }}" alt="Logo de la empresa" class="logo">
         </div>
 
         <!-- Texto de introducción -->
